clang/clang7.0/error-files/error0001.txt
In file included from arch/x86/hyperv/mmu.c:9:
./arch/x86/include/asm/mshyperv.h:190:23: error: invalid operand in inline asm: 'mov $4, %r8999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$5662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${5:V}6651:	.popsection'
        __asm__ __volatile__("mov %4, %%r8\n"
                             ^
./arch/x86/include/asm/mshyperv.h:190:23: error: invalid operand in inline asm: 'mov $4, %r8999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$5662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${5:V}6651:	.popsection'
./arch/x86/include/asm/mshyperv.h:190:23: error: invalid operand in inline asm: 'mov $4, %r8999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$5662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${5:V}6651:	.popsection'
./arch/x86/include/asm/mshyperv.h:190:23: error: invalid operand in inline asm: 'mov $4, %r8999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$5662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${5:V}6651:	.popsection'
./arch/x86/include/asm/mshyperv.h:190:23: error: invalid operand in inline asm: 'mov $4, %r8999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$5662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${5:V}6651:	.popsection'
./arch/x86/include/asm/mshyperv.h:190:23: error: invalid operand in inline asm: 'mov $4, %r8999:	.pushsection .discard.nospec	.long 999b - .	.popsection	661:	999:	.pushsection .discard.retpoline_safe	 .quad  999b	.popsection	call *$5662:.skip -(((6651f-6641f)-(662b-661b)) > 0) * ((6651f-6641f)-(662b-661b)),0x90663:.pushsection .altinstructions,"a" .long 661b - . .long 6641f - . .word ( 7*32+12) .byte 663b-661b .byte 6651f-6641f .byte 663b-662b.popsection.pushsection .altinstr_replacement, "ax"6641:	call __x86_indirect_thunk_${5:V}6651:	.popsection'
6 errors generated.
make[2]: *** [scripts/Makefile.build:325: arch/x86/hyperv/mmu.o] Error 1
make[1]: *** [scripts/Makefile.build:583: arch/x86/hyperv] Error 2
make: *** [Makefile:1060: arch/x86] Error 2
